--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.classpath
+.project
+.settings/
+target/
+src/main/webapp/WEB-INF/classes/
+src/main/webapp/WEB-INF/lib/
+bin/
+.idea
+*.iml
+catalina.home_IS_UNDEFINED
+/mobanker-safe-parent/**/bin/
+atlassian-ide-plugin.xml
+classes
+logs/
